# forge

./: .env.docker  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.sandbox  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  boundaries.py
backend/app/adapters/: __init__.py  aider_tool.py  github_vcs.py  mock_coding_tool.py  openhands.py  openrouter.py  (+1 more)
backend/config/: adapters.yaml  models.yaml  policies.yaml  rate_limits.yaml  tools.yaml  verification.yaml
backend/docs/: ARCHITECTURE.md  DEVELOPMENT.md
backend/tests/: __init__.py  test_adapters.py  test_api.py  test_api_approval.py  test_api_config.py  test_api_errors.py  test_api_recovery.py  test_audit.py  test_audit_properties.py  test_auth.py  test_backpressure.py  test_boundaries.py  test_budget.py  test_budget_properties.py  test_checkpoint_operations.py  test_checkpoint_recovery.py  test_checkpoint_store.py  test_circuit_breaker.py  test_clarification.py  test_classifier.py  test_commit_finalization_docs.py  test_commit_workflow.py  test_config_service.py  test_dependency_wiring.py  test_discovery.py  test_discovery_properties.py  test_dispatcher.py  test_documentation.py  test_event_bus.py  test_event_properties.py  test_finalization.py  test_github_vcs_commit.py  test_health_monitor.py  test_inspector.py  test_inspector_properties.py  test_intent_router.py  test_interrupt.py  test_learning.py  test_mode_evaluation.py  test_planner.py  (+25 more)
(+133 files in other folders)
