[project]
name = "forge-runtime"
version = "0.1.0"
description = "Forge - Autonomous Software Engineering Runtime"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.0",
    "pydantic>=2.9.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "uvicorn>=0.32.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
